# tradebot-backtest-lab

./: .gitignore  README.md  pyproject.toml
data/: hyperliquid_BTC_1h.csv  hyperliquid_BTC_1h_2026-05-10.csv  hyperliquid_BTC_funding.csv
docs/superpowers/plans/: 2026-06-07-regime-switching-strategy.md  2026-06-08-vwap-deviation-mean-reversion.md
docs/superpowers/specs/: 2026-06-07-regime-switching-strategy-design.md  2026-06-08-vwap-deviation-mean-reversion-design.md
reports/latest/: regime_distribution.csv  summary.csv  trades.csv  training_selection.csv
src/tradebot_backtest/: __init__.py  cli.py  data.py  engine.py  regime.py  reporting.py  strategies.py
tests/: test_cli_reporting.py  test_data.py  test_engine.py  test_regime.py  test_regime_reporting.py  test_strategies.py
